creacion de AuthService/IAuthService , UserService/IUserService y modificacion de program y token en appsetting

--- a/Back/appsettings.json
+++ b/Back/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=FarmaciaDB;User Id=sa;Password=FarmaciaPaz2026!;TrustServerCertificate=True;"
+  },
+  "AppSettings": {
+    "Token": "Esta_Es_Mi_Clave_Secreta_Super_Larga_Farmacia_Paz_2026_Cba"
   }
 }
