--- a/Front/package.json
+++ b/Front/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@types/react": "^19.2.8",
+    "@types/react-dom": "^19.2.3",
     "axios": "^1.13.2",
     "react-router-dom": "^7.12.0"
   },
