--- a/Front/reservas-frontend/package.json
+++ b/Front/reservas-frontend/package.json
@@ -17,9 +17,11 @@
     "react-router-dom": "^7.12.0"
   },
   "devDependencies": {
+    "@testing-library/react": "^16.3.1",
     "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
     "@types/react-router-dom": "^5.3.3",
+    "@types/testing-library__react": "^10.0.1",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^5.1.2",
